--- a/src/input.css
+++ b/src/input.css
@@ -19,9 +19,27 @@
 .wave-ring {
   position: absolute;
   border-radius: 9999px;
-  border: 2px solid #ef4444; /* red-500 */
-  background-color: #ef4444;
-  animation: wave-ring 1.8s infinite ease-out;
+  border: 2px solid #ef4444;
+  /*red-500*/background-color: #ef4444;
+  animation: wave-ring 3s infinite ease-out;
+  -webkit-animation: wave-ring 3s infinite ease-out;
+}
+.wave-ring:nth-child(1) { animation-delay: 0s; }
+.wave-ring:nth-child(2) { animation-delay: 1.5s; }
+.wave-ring:nth-child(3) { animation-delay: 2s; }
+.wave-ring:nth-child(4) { animation-delay: 2.5s; }
+.wave-ring:nth-child(5) { animation-delay: 3s; }
+
+
+
+
+@keyframes write {
+  0% {
+    max-width: 0;
+  }
+  100% {
+    max-width: 100%;
+  }
 }
 
 
